--- a/fullstack.html
+++ b/fullstack.html
@@ -24,7 +24,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href="#">Digital House</a>
+                    <a class="navbar-brand" href="index.html">Digital House</a>
                 </div>
                 <div id="navbar" class="collapse navbar-collapse">
                     <ul class="nav navbar-nav">
@@ -160,7 +160,17 @@
                             <input type="password" name="senha" class="form-control">
                         </div>
 
-                        <button class="btn btn-primary">Enviar</button>
+                        <div class="form-group">
+                            <button class="btn btn-primary">Enviar</button>
+                        </div>
+
+                        <div class="alert alert-success">
+                            <p>Formulário enviado com sucesso!</p>
+                        </div>
+
+                        <div class="alert alert-danger">
+                            <p>Ops, erro ao enviar formulário!</p>
+                        </div>
                     </form>
                 </div>
             </div>
